--- a/VagrantWorkShop/VyOS/Vagrantfile
+++ b/VagrantWorkShop/VyOS/Vagrantfile
@@ -12,11 +12,14 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "vyos130-g2"
+  config.vm.box = "VYOS130-G2"
   config.vm.network "private_network", bridge: "Internal Switch"
   
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "VyOS130-G2"
+    hv.auto_stop_action  = "Save"
+    hv.maxmemory = 2048
+    hv.memory = 1024
     config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
       trigger.info = "Add new network addapter"
       trigger.run = {inline: "./Add-VMNetworkAdapter.ps1"}
@@ -26,6 +29,7 @@ Vagrant.configure("2") do |config|
   # config.vm.provision "file", source: "./sources.list", destination: "/tmp/sources.list"
   # config.vm.provision "shell", inline: "sudo cp /tmp/sources.list /etc/apt/sources.list"
   config.vm.provision "file", source: "./install.sh", destination: "/tmp/install.sh"
+  config.vm.provision "file", source: "./finalConfig.sh", destination: "/tmp/finalConfig.sh"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
