--- a/VagrantWorkShop/OpsSvc/Vagrantfile
+++ b/VagrantWorkShop/OpsSvc/Vagrantfile
@@ -1,6 +1,6 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
-
+# ENV['VAGRANT_EXPERIMENTAL'] = 'typed_triggers'
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
@@ -18,8 +18,13 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "OpsSvc"
-    hv.memory = 6144
+    hv.memory = 7168
+    # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
+    #   trigger.info = "Run-Dos2Unix"
+    #   trigger.run = {inline: "./Run-Dos2Unix.ps1"}
+    # end
   end
+  config.vm.provision "shell", inline: "sudo dnf install git -y"
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
