--- a/VagrantWorkShop/VyOS/Vagrantfile
+++ b/VagrantWorkShop/VyOS/Vagrantfile
@@ -23,6 +23,7 @@ Vagrant.configure("2") do |config|
     config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
       trigger.info = "Add new network addapter"
       trigger.run = {inline: "./Add-VMNetworkAdapter.ps1"}
+      trigger.run = {inline: "./Run-Dos2Unix.ps1"}
     end
   end
   config.vm.provision "shell", path: "./provisionConfig.sh"
