--- a/VagrantWorkShop/VyOS/Vagrantfile
+++ b/VagrantWorkShop/VyOS/Vagrantfile
@@ -17,9 +17,9 @@ Vagrant.configure("2") do |config|
   
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "VyOS130-G2"
-    hv.auto_stop_action  = "Save"
+    # hv.auto_stop_action  = "Save"
     hv.maxmemory = 2048
-    hv.memory = 1024
+    hv.memory = 768
     config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
       trigger.info = "Add new network addapter"
       trigger.run = {inline: "./Add-VMNetworkAdapter.ps1;
