add values for k8s-at-home/powerdnsadmin

--- a/VagrantWorkShop/OpsSvc/powerdns/values.yaml
+++ b/VagrantWorkShop/OpsSvc/powerdns/values.yaml
@@ -71,6 +71,7 @@ powerdns:
     database: pdns
   dnssec: true
   config: {}
+  api_key: EakZu2FgevlAmNWZ9gc8yMeu
 
 # Enabled mariadb
 # ... for more options see https://github.com/bitnami/charts/tree/master/bitnami/mariadb
