--- a/VagrantWorkShop/InfraSvc/powerdns/values.yaml
+++ b/VagrantWorkShop/InfraSvc/powerdns/values.yaml
@@ -61,7 +61,7 @@ tolerations: []
 affinity: {}
 
 powerdns:
-  domain: vyos
+  domain: lab
   postgres:
     username: pdns
     password: pdnspass
@@ -77,7 +77,7 @@ powerdns:
 # Enabled mariadb
 # ... for more options see https://github.com/bitnami/charts/tree/master/bitnami/mariadb
 mariadb:
-  enabled: false
+  enabled: true
   architecture: standalone
   auth:
     database: pdns
@@ -86,13 +86,13 @@ mariadb:
     rootPassword: pdnsrootpass
   primary:
     persistence:
-      enabled: false
-      # storageClass: ""
+      enabled: true
+      storageClass: "pdns"
 
 # Enabled postgres
 # ... for more options see https://github.com/bitnami/charts/tree/master/bitnami/postgresql
 postgresql:
-  enabled: true
+  enabled: false
   postgresqlUsername: pdns
   postgresqlPassword: pdnspass
   postgresqlPostgresPassword: pdnsadminpass
