--- a/HelmWorkShop/powerdns/values.yaml
+++ b/HelmWorkShop/powerdns/values.yaml
@@ -88,6 +88,10 @@ mariadb:
     persistence:
       enabled: true
       storageClass: "pdns"
+      mountPath: /bitnami/mariadb
+      subPath: "powerdns"
+      accessModes:
+      - ReadWriteOnce"
 
 # Enabled postgres
 # ... for more options see https://github.com/bitnami/charts/tree/master/bitnami/postgresql
@@ -98,8 +102,12 @@ postgresql:
   postgresqlPostgresPassword: pdnsadminpass
   postgresqlDatabase: pdns
   persistence:
-    enabled: true
+    enabled: false
     storageClass: "pdns"
+    mountPath: /bitnami/postgresql
+      subPath: "powerdns"
+      accessModes:
+      - ReadWriteOnce"
 
 
 # Probes configuration
