--- a/VagrantWorkShop/InfraSvc/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc/Vagrantfile
@@ -12,13 +12,15 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "UBUNTU2004-G2"
+  config.vm.box = "alpinelinux314-g2"
 
   config.vm.network "private_network", bridge: "Internal Switch"
 
+  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "InfraSvc"
-    hv.memory = 3072
+    hv.memory = 4096
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
     #   trigger.info = "Run-Dos2Unix"
@@ -28,25 +30,27 @@ Vagrant.configure("2") do |config|
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
-  config.vm.provision "shell", inline: "curl -sfL http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
+  # https://serverok.in/wget-print-content-to-screen#:~:text=wget%20print%20content%20to%20screen%20wget%20is%20used,this%2C%20you%20can%20replace%20wget%20command%20with%20curl.
+  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
   # for other country
-  # config.vm.provision "shell", inline: "curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
-  # add k3s config env
-  config.vm.provision "shell", inline: "echo \"export KUBECONFIG=/etc/rancher/k3s/k3s.yaml\" >> ~/.bashrc"
-  # install helm
-  config.vm.provision "shell", inline: "sudo snap install helm --classic"
-  # upload helm values
-  # config.vm.provision "file", source: "./powerdns", destination: "/tmp/powerdns"
-  # config.vm.provision "file", source: "./powerdns-admin", destination: "/tmp/powerdns-admin"
+  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
   
-  # move uploads to /home/vagrant
-  # config.vm.provision "shell", inline: "mv /tmp/powerdns ~/powerdns"
-  # config.vm.provision "shell", inline: "mv /tmp/powerdns-admin ~/powerdns-admin"
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
+  # add k3s config env
+  # for alpine
+  config.vm.provision "shell", inline: "echo 'export KUBECONFIG=/etc/rancher/k3s/k3s.yaml' >> /home/vagrant/.profile"
+  # for others
+  # config.vm.provision "shell", inline: "echo \"export KUBECONFIG=/etc/rancher/k3s/k3s.yaml\" >> ~/.bashrc"
+  
+  config.vm.provision "shell", inline: "swapoff -a && sudo rc-update add cgroups default"
+  # install helm
+  # for alpine
+  config.vm.provision "shell", inline: "sudo apk add helm"
+  # for others
+  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
 
+  # reboot for alpine
+  config.vm.provision "shell", inline: "sudo reboot"
+  
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
