--- a/VagrantWorkShop/InfraSvc-wrk/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-wrk/Vagrantfile
@@ -14,14 +14,14 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "alpinelinux314-g2"
 
-  config.vm.hostname = "InfraSvc-Mst"
+  config.vm.hostname = "InfraSvc-Wrk"
 
   config.vm.network "private_network", bridge: "Internal Switch"
 
   config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   config.vm.provider "hyperv" do |hv, config|
-    hv.vmname = "InfraSvc"
+    hv.vmname = "InfraSvc-wrk"
     hv.memory = 3072
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
