--- a/HelmWorkShop/powerdns-admin/values.yaml
+++ b/HelmWorkShop/powerdns-admin/values.yaml
@@ -53,12 +53,12 @@ probes:
 
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: powerdns-admin.vyos
+    - host: powerdns-admin.lab
       paths: []
 
   tls: []
