set postgresql values volumePermissions.enabled to true

--- a/HelmWorkShop/postgresql/values.yaml
+++ b/HelmWorkShop/postgresql/values.yaml
@@ -15,3 +15,7 @@ global:
     postgresqlPassword: "admin"
     #servicePort: ""
     replicationPassword: ""
+volumePermissions:
+  ## @param volumePermissions.enabled Enable init container that changes volume permissions in the data directory (for cases where the default k8s `runAsUser` and `fsUser` values do not work)
+  ##
+  enabled: true
