--- a/HelmWorkShop/powerdns/values-halkeye.yaml
+++ b/HelmWorkShop/powerdns/values-halkeye.yaml
@@ -1,14 +1,13 @@
-# https://github.com/halkeye-helm-charts/powerdnsadmin
-# Default values for powerdnsadmin.
+# Default values for powerdns.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: ngoduykhanh/powerdns-admin
-  tag: "{{ .Chart.AppVersion }}"
-  pullPolicy: IfNotPresent
+  repository: discourse/powerdns
+  tag: latest
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
@@ -17,8 +16,6 @@ fullnameOverride: ""
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
-  annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name:
@@ -27,7 +24,6 @@ podSecurityContext: {}
   # fsGroup: 2000
 
 securityContext: {}
-  # privileged: true
   # capabilities:
   #   drop:
   #   - ALL
@@ -36,35 +32,12 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  externalTrafficPolicy:
+  ## Set external traffic policy to: "Local" to preserve source IP on
+  ## providers supporting it
+  ## Ref: https://kubernetes.io/docs/tutorials/services/source-ip/#source-ip-for-services-with-typeloadbalancer
+  externalTrafficPolicy: ""
   type: LoadBalancer
-  port: 9191
-probes:
-  liveness:
-    failureThreshold: 5
-    periodSeconds: 10
-  readiness:
-    failureThreshold: 5
-    periodSeconds: 10
-  startup:
-    initialDelaySeconds: 5
-    failureThreshold: 30
-    periodSeconds: 10
-
-
-ingress:
-  enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: powerdns-admin.lab
-      paths: []
-
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  port: 53
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -84,14 +57,12 @@ tolerations: []
 
 affinity: {}
 
-db:
-  type: postgres
-  host: postgresql
-  port: 5432
-  username: admin
-  password: admin
-  database: pdns_admin
-
-podAnnotations: {}
-
-deploymentAnnotations: {}
+powerdns:
+  postgres:
+    host: postgresql.pgsql
+    port: 5432
+    username: admin
+    password: admin
+    database: powerdns
+  dnssec: true
+  config: {}
