--- a/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "DEBIAN11.0.0-G2"
+  config.vm.box = "DEBIAN1100-G2"
 
   config.vm.hostname = "InfraSvc-Debian"
 
@@ -21,7 +21,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   config.vm.provider "hyperv" do |hv, config|
-    hv.vmname = "InfraSvc"
+    hv.vmname = "InfraSvc-Debian"
     hv.memory = 3072
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
@@ -48,8 +48,8 @@ Vagrant.configure("2") do |config|
   # for alpine
   #config.vm.provision "shell", inline: "sudo apk add helm"
   # for others
-  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
-  config.vm.provision "shell", inline: "sudo apt install helm -y"
+  config.vm.provision "shell", inline: "sudo snap install helm --classic"
+  # config.vm.provision "shell", inline: "sudo apt install helm -y"
 
   # reboot for alpine
   config.vm.provision "shell", inline: "sudo reboot"
