--- a/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
@@ -52,7 +52,7 @@ Vagrant.configure("2") do |config|
   # config.vm.provision "shell", inline: "sudo apt install helm -y"
 
   # reboot for alpine
-  config.vm.provision "shell", inline: "sudo reboot"
+  # config.vm.provision "shell", inline: "sudo reboot"
   
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
