--- a/HelmWorkShop/powerdns/values-k8s-at-home.yaml
+++ b/HelmWorkShop/powerdns/values-k8s-at-home.yaml
@@ -113,6 +113,39 @@ postgresql:
   ## @param volumePermissions.enabled Enable init container that changes volume permissions in the data directory (for cases where the default k8s `runAsUser` and `fsUser` values do not work)
   ##
     enabled: true
+  ## PostgreSQL service configuration
+  ##
+  service:
+    ## @param service.type Kubernetes Service type
+    ##
+    type: LoadBalancer
+    ## @param service.clusterIP Static clusterIP or None for headless services
+    ## e.g:
+    ## clusterIP: None
+    ##
+    clusterIP: ""
+    ## @param service.port PostgreSQL port
+    ##
+    port: 5432
+    ## @param service.nodePort Specify the nodePort value for the LoadBalancer and NodePort service types
+    ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
+    ##
+    nodePort: ""
+    ## @param service.annotations Annotations for PostgreSQL service
+    ##
+    annotations: {}
+    ## @param service.loadBalancerIP Load balancer IP if service type is `LoadBalancer`
+    ## Set the LoadBalancer service type to internal only
+    ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
+    ##
+    loadBalancerIP: ""
+    ## @param service.loadBalancerSourceRanges Addresses that are allowed when service is LoadBalancer
+    ## https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/#restrict-access-for-loadbalancer-service
+    ##
+    ## loadBalancerSourceRanges:
+    ## - 10.10.10.0/24
+    ##
+    loadBalancerSourceRanges: []
 
 # Probes configuration
 probes:
