--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -13,15 +13,16 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "alpinelinux314-g2"
-
-  config.vm.hostname = "InfraSvc-Mst"
+  config.vm.guest = :alpine
+  config.vm.hostname = "InfraSvc-Alpine"
 
   config.vm.network "private_network", bridge: "Internal Switch"
 
   config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   config.vm.provider "hyperv" do |hv, config|
-    hv.vmname = "InfraSvc"
+    hv.mac = "0000BABEFACE"
+    hv.vmname = "InfraSvc-Alpine"
     hv.memory = 3072
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
@@ -33,7 +34,8 @@ Vagrant.configure("2") do |config|
   # https://github.com/kurokobo/awx-on-k3s
   # for china
   # https://serverok.in/wget-print-content-to-screen#:~:text=wget%20print%20content%20to%20screen%20wget%20is%20used,this%2C%20you%20can%20replace%20wget%20command%20with%20curl.
-  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
+  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | K3S_TOKEN=SECRET INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--cluster-init --write-kubeconfig-mode 644\" sh -"
+  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
   # for other country
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
   
@@ -43,7 +45,7 @@ Vagrant.configure("2") do |config|
   # for others
   # config.vm.provision "shell", inline: "echo \"export KUBECONFIG=/etc/rancher/k3s/k3s.yaml\" >> ~/.bashrc"
   
-  config.vm.provision "shell", inline: "sudo swapoff -a && sudo rc-update add cgroups default"
+  # config.vm.provision "shell", inline: "sudo swapoff -a && sudo rc-update add cgroups default"
   # install helm
   # for alpine
   config.vm.provision "shell", inline: "sudo apk add helm"
