--- a/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
@@ -33,13 +33,14 @@ Vagrant.configure("2") do |config|
   # https://github.com/kurokobo/awx-on-k3s
   # for china
   # https://serverok.in/wget-print-content-to-screen#:~:text=wget%20print%20content%20to%20screen%20wget%20is%20used,this%2C%20you%20can%20replace%20wget%20command%20with%20curl.
-  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | K3S_TOKEN=SECRET INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--cluster-init --write-kubeconfig-mode 644\" sh -"
+  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | K3S_TOKEN=SECRET INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--cluster-init --write-kubeconfig-mode 644\" sh -"
+  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
   # for other country
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
   
   # add k3s config env
   # for alpine
-  config.vm.provision "shell", inline: "echo 'export KUBECONFIG=/etc/rancher/k3s/k3s.yaml' >> /home/vagrant/.profile"
+  # config.vm.provision "shell", inline: "echo 'export KUBECONFIG=/etc/rancher/k3s/k3s.yaml' >> /home/vagrant/.profile"
   # for others
   # config.vm.provision "shell", inline: "echo \"export KUBECONFIG=/etc/rancher/k3s/k3s.yaml\" >> ~/.bashrc"
   
