--- a/VagrantWorkShop/VyOS/Vagrantfile
+++ b/VagrantWorkShop/VyOS/Vagrantfile
@@ -30,9 +30,10 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", path: "./provisionConfig.sh"
   # config.vm.provision "file", source: "./sources.list", destination: "/tmp/sources.list"
   # config.vm.provision "shell", inline: "sudo cp /tmp/sources.list /etc/apt/sources.list"
-  config.vm.provision "file", source: "./install.sh", destination: "/tmp/install.sh"
-  config.vm.provision "file", source: "./finalConfig.sh", destination: "/tmp/finalConfig.sh"
-
+  config.vm.provision "file", source: "./install.sh", destination: "/home/vagrant/install-clash.sh"
+  config.vm.provision "file", source: "./finalConfig.sh", destination: "/home/vagrant/finalConfig.sh"
+  config.vm.provision "file", source: "./vyos-install-docker.sh", destination: "/home/vagrant/vyos-install-docker.sh"
+  config.vm.provision "file", source: "./docker-compose.vyos-pihole.yaml", destination: "/home/vagrant/docker-compose.yaml"
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
