--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -21,7 +21,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   config.vm.provider "hyperv" do |hv, config|
-    hv.mac = "0000BABEFACE"
+    # hv.mac = "0000BABEFACE"
     hv.vmname = "InfraSvc-Alpine"
     hv.memory = 3072
     hv.cpus = 4
