--- a/HelmWorkShop/traefik-dashboard/traefik-config.yaml
+++ b/HelmWorkShop/traefik-dashboard/traefik-config.yaml
@@ -19,3 +19,11 @@ spec:
         annotations: {}
         # Additional ingressRoute labels (e.g. for filtering IngressRoute by custom labels)
         labels: {}
+    ports:
+      web:
+        port:8080
+        hostPort: 80
+        redirectTo: 'websecure'
+      websecure:
+        port: 8443
+        hostPort: 443
