--- a/HelmWorkShop/cert-manager/issuer.yaml
+++ b/HelmWorkShop/cert-manager/issuer.yaml
@@ -1,12 +1,17 @@
 # https://cloud.tencent.com/developer/article/1326543
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
+  namespace: cert-manager
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: example@example.com
+    email: drw_08@hotmail.com
     privateKeySecretRef:
       name: letsencrypt-prod
-    http01: {}
+    solvers:
+      - http01:
+          ingress:
+            # ../traefik-config/traefik-config.yaml
+            class: traefik
