update traefik dashboard config

--- a/HelmWorkShop/traefik-config/traefik-config_update.yaml
+++ b/HelmWorkShop/traefik-config/traefik-config_update.yaml
@@ -14,6 +14,8 @@ spec:
         port: 443
     additionalArguments:
       - "--providers.kubernetesingress.ingressclass=traefik"
+      - "--entryPoints.web.http.redirections.entryPoint.to=websecure"
+      - "--entryPoints.web.http.redirections.entryPoint.scheme=https"
     securityContext:
       capabilities:
         drop: [ALL]
