--- a/HelmWorkShop/traefik-dashboard/IngressRoute.yaml
+++ b/HelmWorkShop/traefik-dashboard/IngressRoute.yaml
@@ -17,4 +17,4 @@ spec:
       services:
         # Special service created by Traefik pod
         - name: api@internal
-          kind: TraefikService[]
+          kind: TraefikService
