--- a/HelmWorkShop/traefik-config/traefik-config.yaml
+++ b/HelmWorkShop/traefik-config/traefik-config.yaml
@@ -12,8 +12,8 @@ spec:
         port: 80
       websecure:
         port: 443
-    additionalArguments:
-      - "--providers.kubernetesingress.ingressclass=traefik"
+    # additionalArguments:
+    #   - "--providers.kubernetesingress.ingressclass=traefik"
     securityContext:
       capabilities:
         drop: [ALL]
