add comment about how to gen traefik dashboard auth secret username password

--- a/HelmWorkShop/traefik-dashboard/auth.yaml
+++ b/HelmWorkShop/traefik-dashboard/auth.yaml
@@ -17,6 +17,7 @@ metadata:
   namespace: kube-system
 data:
   #  admin admin
+  # echo $(htpasswd -nb admin admin) | base64
   # https://doc.traefik.io/traefik/v2.0/middlewares/basicauth/#general
   # https://yaml-multiline.info/
   users: |
