--- a/HelmWorkShop/dex/value.yaml
+++ b/HelmWorkShop/dex/value.yaml
@@ -54,8 +54,8 @@ config:
   # https://github.com/dexidp/dex/blob/master/examples/config-dev.yaml#L135
   enablePasswordDB: true
   staticPasswords:
-  - email: "drw_08@hotmail.com"
-  # echo $(echo password | htpasswd -BinC 10 admin | cut -d: -f2
+  - email: "lab@solo.lab"
+  # echo $(echo password | htpasswd -BinC 10 admin | cut -d: -f2)
     hash: "$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W"
     username: "admin"
     userID: "08a8684b-db88-4b73-90a9-3cd1661f5466"
