--- a/HelmWorkShop/cert-manager/issuer-selfsigned.yaml
+++ b/HelmWorkShop/cert-manager/issuer-selfsigned.yaml
@@ -1,6 +1,6 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: selfsigned
+  name: issuer-selfsigned
 spec:
   selfSigned: {}
