comment out namespace part in spec

--- a/HelmWorkShop/traefik-dashboard/auth.yaml
+++ b/HelmWorkShop/traefik-dashboard/auth.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: kube-system
 spec:
   basicAuth:
-    namespace: kube-system
+    # namespace: kube-system
     secret: traefik-auth
 
 ---
