--- a/HelmWorkShop/loginapp/values.yaml
+++ b/HelmWorkShop/loginapp/values.yaml
@@ -27,9 +27,9 @@ config:
   # a new secret at each deployment
   secret: LOGINAPPSECRET123
   # OIDC Client ID
-  clientID: loginapp
+  clientID: kubernetes
   # OIDC Client secret
-  clientSecret: OIDCAPPSECRET123
+  clientSecret: ZXhhbXBsZS1hcHAtc2VjcmV0
   # OIDC Client redirect URL
   # This must end with /callback
   # if empty, defaults to:
@@ -69,16 +69,16 @@ config:
     # Self signed certificat IPs
     altIPs: []
   # List of kubernetes clusters to add on web frontend
-  clusters: []
-  #  - name: myfakecluster
-  #    server: https://myfakecluster.org
-  #    certificate-authority: |
-  #      -----BEGIN CERTIFICATE-----
-  #      MIIC/zCCAeegAwIBAgIULkYvGJPRl50tMoVE4BNM0laRQncwDQYJKoZIhvcNAQEL
-  #      BQAwDzENMAsGA1UEAwwEbXljYTAeFw0xOTAyMTgyMjA5NTJaFw0xOTAyMjgyMjA5
-  #      NTJaMA8xDTALBgNVBAMMBG15Y2EwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEK
-  #      -----END CERTIFICATE-----
-  #    insecure-skip-tls-verify: false
+  clusters: 
+   - name: sololab
+     server: https://solo.lab:6443
+     certificate-authority: |
+       -----BEGIN CERTIFICATE-----
+       MIIC/zCCAeegAwIBAgIULkYvGJPRl50tMoVE4BNM0laRQncwDQYJKoZIhvcNAQEL
+       BQAwDzENMAsGA1UEAwwEbXljYTAeFw0xOTAyMTgyMjA5NTJaFw0xOTAyMjgyMjA5
+       NTJaMA8xDTALBgNVBAMMBG15Y2EwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEK
+       -----END CERTIFICATE-----
+    #  insecure-skip-tls-verify: true
   #    # Alternative context name for this cluster
   #    contextName: altcontextname
 
